--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,18 @@
 <body class="container1">
     <header>
         <div id="header-container">
-            <h1 class="about_me1">Jimmie L Bivins</h1>
-            
-        </div>      
+          <h1 class="about_me1">Jimmie L Bivins</h1>
+          <nav>
+              <ul>
+                  <li><a href="index.html">Index</a></li>
+                  <li><a href="#">Contact</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
+              </ul>
+          </nav>      
             
     </header>
-    <div class="about_me">
+    <div id="content">
+        <h1 class="about_me2">Contact</h1>
       <form>
         <p>Name</p>
         <input type="text" name="Name"/>
@@ -33,8 +39,12 @@
         <p>Message</p>
         <input type="text" name="Message">
       </form>
+      <a href="#" class="button">Submit</a>
     </div>
 
-</body> 
 
+</body> 
+    <footer>
+
+    </footer>
 </html>
